--- a/src/app/pages/builds/builds.page.html
+++ b/src/app/pages/builds/builds.page.html
@@ -48,7 +48,7 @@
             {{build?.title}}
           </p>
           <div class="price">
-            {{build?.price |number}} د.ع
+            {{build?.price |number}} $
           </div>
         </div>
         <div class="footer_content">
