--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="item_box animate__animated animate__fadeInBottomLeft duration">
+    <div class="item_box animate__animated animate__fadeInBottomLeft duration" (click)="whatsapp()">
       <div class="image">
         <img src="../../../assets/images/connect.svg" alt="">
       </div>
