--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -116,7 +116,7 @@ h1 {
         width: 100%;
         height: 100%;
         background: rgb(4, 9, 32);
-        background: linear-gradient(115deg, rgba(233, 234, 236, 0.034) 0%, rgba(18, 43, 145, 0.415) 100%);
+        background: linear-gradient(115deg, rgba(233, 234, 236, 0.024) 0%, rgba(18, 43, 145, 0.85) 100%);
       }
 
       img {
@@ -143,6 +143,7 @@ h1 {
         p {
           font-size: 12px;
           margin-top: 0;
+          font-family: 'bold';
           line-height: 14px;
         }
       }
