--- a/src/app/pages/details/details.page.scss
+++ b/src/app/pages/details/details.page.scss
@@ -29,6 +29,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transform: scale(1.3);
   }
 
   .swiper-pagination.swiper-pagination-fraction.swiper-pagination-horizontal {
