--- a/src/app/pages/details/details.page.scss
+++ b/src/app/pages/details/details.page.scss
@@ -91,6 +91,7 @@
     p {
       color: var(--light-text);
       font-size: 12px;
+
     }
 
   }
@@ -206,6 +207,7 @@
 
     p {
       color: #040920;
+      line-height: 22px;
     }
 
   }
