--- a/src/app/pages/builds/builds.page.scss
+++ b/src/app/pages/builds/builds.page.scss
@@ -1,15 +1,11 @@
-ion-header {
-  --background: #F8F9FB;
-
-  ion-toolbar {
-    --background: #F8F9FB;
-
-
-  }
+:root {
+  --ion-background: #F8F9FB;
 }
 
+ion-header,
+ion-toolbar,
 ion-content {
-  --background: #F8F9FB;
+  --background: var(--ion-background);
 }
 
 .container {
@@ -169,34 +165,5 @@ ion-modal {
         border-radius: 25px;
       }
     }
-  }
-}
-
-img.sold {
-  position: absolute;
-  width: 100% !important;
-  /* display: block; */
-  background: rgba(1, 1, 1, .3);
-  height: 100% !important;
-  padding: 30px;
-}
-
-.stoped {
-  position: absolute;
-  width: 100% !important;
-  /* display: block; */
-  background: rgba(1, 1, 1, 0.3);
-  height: 100% !important;
-  padding: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  /* color: #fff; */
-  p {
-    font-size: 28px;
-    color: #fff;
-    font-family: 'bold';
-    transform: rotate(345deg);
   }
 }
