--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -25,7 +25,7 @@
   .backBtn {
     position: absolute;
     right: 0;
-    top: 0px;
+    top: 20px;
     border: 1px solid;
     --border-radius: 50%;
     border-radius: 50%;
@@ -33,6 +33,7 @@
     --padding-start: 0;
     height: 40px;
     width: 40px;
+    z-index: 9999;
   }
 
   img.logo {
