--- a/src/global.scss
+++ b/src/global.scss
@@ -66,6 +66,10 @@ ion-header {
   }
 }
 
+ion-content {
+  --background: #F8F9FB;
+}
+
 .header-ios ion-toolbar:last-of-type {
   --border-width: 0 !important;
 }
@@ -139,5 +143,25 @@ ng-otp-input>div {
     height: 255px;
     border: 4px solid #F3F3F5;
     border-radius: 20px;
+  }
+}
+
+.stoped {
+  position: absolute;
+  width: 100% !important;
+  /* display: block; */
+  background: rgba(1, 1, 1, 0.3);
+  height: 100% !important;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* color: #fff; */
+  p {
+    font-size: 28px;
+    color: #fff;
+    font-family: 'bold';
+    transform: rotate(345deg);
   }
 }
