--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -443,7 +443,7 @@
     </div>
   </div>
 
-  <!-- 
+  <!--
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button mode="ios" (click)="addBuild()">
       <ion-icon name="add"></ion-icon>
@@ -466,11 +466,16 @@
         <div class="filter_body">
           <p>المحافظة</p>
           <div class="item_box">
-            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="city">
+            <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="city" (ionChange)="getZones()">
               <ion-select-option *ngFor="let city of citys" [value]="city._id">{{city.name}}</ion-select-option>
             </ion-select>
           </div>
-
+          <p>المنطقة</p>
+          <div class="item_box">
+            <ion-select mode="ios" placeholder="" [(ngModel)]="subzone">
+              <ion-select-option *ngFor="let zone of subzones" [value]="zone._id">{{zone.name}}</ion-select-option>
+            </ion-select>
+          </div>
           <p>نوع ملكيه السند</p>
           <div class="item_box">
             <ion-select mode="ios" placeholder="الشقق" [(ngModel)]="bondType">
